--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "jquery": "^3.7.0",
+    "jquery-timepicker": "^1.3.3",
     "ngx-bootstrap": "^10.2.0",
     "ngx-material-timepicker": "^5.5.2",
     "rxjs": "~7.8.0",
+    "timepicker": "^1.14.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -37,6 +40,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@angular/localize": "^16.0.3",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
