--- a/package.json
+++ b/package.json
@@ -10,43 +10,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-components/datetime-picker": "^9.0.0",
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.2",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.2",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^16.0.4",
+    "@angular/cdk": "^16.0.3",
+    "@angular/common": "^16.0.4",
+    "@angular/compiler": "^16.0.4",
+    "@angular/core": "^16.0.4",
+    "@angular/forms": "^16.0.4",
+    "@angular/material": "^16.0.3",
+    "@angular/platform-browser": "^16.0.4",
+    "@angular/platform-browser-dynamic": "^16.0.4",
+    "@angular/router": "^16.0.4",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
     "jquery-timepicker": "^1.3.3",
     "ngx-bootstrap": "^10.2.0",
-    "ngx-material-timepicker": "^5.5.2",
+    "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~7.8.0",
     "timepicker": "^1.14.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.5.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.2",
-    "@angular/cli": "~16.0.2",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/localize": "^16.0.3",
+    "@angular-devkit/build-angular": "^16.0.4",
+    "@angular/cli": "^16.0.4",
+    "@angular/compiler-cli": "^16.0.4",
+    "@angular/localize": "^16.0.4",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
-    "jasmine-core": "~4.6.0",
+    "jasmine-core": "^5.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.0.2"
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "typescript": "^4.9.3"
   }
 }
